Kubernetes/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: prometheus-node-exporter
  labels:
    app: node-exporter
spec:
  type: NodePort
  selector:
    app: node-exporter
  ports:
    - name: metrics
      protocol: TCP
      port: 9100
      targetPort: 9100
