Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
spec:
  type: LoadBalancer
  selector:
    app: netflix-app
  ports:
    - port: 80
      targetPort: 80
