Kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: dreamtoday.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-service
                port:
                  number: 80
