Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: test.dreamtoday.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-app-76667ff556-nj2dn
                port:
                  number: 80
    - host: k8s-default-netflixi-3bf7bceda7-477401298.eu-north-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-app-76667ff556-nj2dn
                port:
                  number: 80
