Kubernetes/netflix-ingres.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - host: a50a12352f8274cfd8807be381699be5-1848559496.eu-north-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-service  # Replace with your actual Service name
                port:
                  number: 80
